FE/fe-service.yaml
aapiVersion: v1
kind: Service
metadata:
  name: front-end-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  # type: LoadBalancer
  selector:
    app: front-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
